core/docker-registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry
  labels:
    name: docker-registry
spec:
  rules:
    - host: "registry.cedricbrisson.ca"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: docker-registry
                port:
                  number: 80
  tls:
    - hosts:
        - "registry.cedricbrisson.ca"
      secretName: docker-registry
